Configure GitHub Pages deployment

--- a/criminle-app/package.json
+++ b/criminle-app/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "A Wordle-style game where you guess countries based on crime statistics",
   "author": "Criminle Team",
-  "homepage": ".",
+  "homepage": "https://chanind.github.io/criminle",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -28,7 +28,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -47,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
